--- a/assignment1.html
+++ b/assignment1.html
@@ -47,6 +47,8 @@
         console.log(isAnagram('boat','goat')); // true     
         console.log(isAnagram('restful','fluster')); // false
         console.log(isAnagram('elvis','lives')); // false
+        console.log(isAnagram('cellar','recall'));//true
+        console.log(isAnagram('arm','elbow'));//false
     </script>
 </body>
 </html>
